@@ -18,6 +18,8 @@
  - GCE: Allow base64 encoded user-data (LP: #1404311) [Wayne Witzell III]
  - GCE: use short hostname rather than fqdn (LP: #1383794) [Ben Howard]
  - systemd: make init stage run before login prompts shown [Steve Langasek]
+ - hostname: on first boot apply hostname to be same as is written for
+   persistent hostname.  (LP: #1246485)
 0.7.6:
  - open 0.7.6
  - Enable vendordata on CloudSigma datasource (LP: #1303986)
